--- a/styles/main.css
+++ b/styles/main.css
@@ -195,7 +195,16 @@ img {
   .header__search {
     margin: 0;
     margin-top: 14px;
+    position: relative;
+  }
+
+  .header__search::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -20px;
     border-top: 1px solid #BBC4D6;
+    width: calc(100% + 40px);
   }
 
   .input__search {
